[workspace]
resolver = "2"

members = [
    "controller/*",
    "core",
    "jiminy",
    "jup-interface",
    "legacy/*",
    "pricing/ag/core",
    "pricing/ag/std",
    "pricing/core",
    "pricing/flatfee/*",
    "pricing/flatslab/*",
    "pricing/jiminy",
    "pricing/std",
    "sol-val-calc/ag/*",
    "sol-val-calc/core",
    "sol-val-calc/generic",
    "sol-val-calc/jiminy",
    "sol-val-calc/lido/*",
    "sol-val-calc/marinade/*",
    "sol-val-calc/spl/*",
    "sol-val-calc/std",
    "sol-val-calc/wsol/*",
    "std",
    "test-utils",
    "ts/sdk",
    "update-traits",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
version = "0.1.0"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
anyhow = { version = "^1", default-features = false }
bs58-fixed = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
bs58-fixed-wasm = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
const-crypto = { version = "^0.3.0", default-features = false }
ed25519-compact = { version = "^2", default-features = false }
generic-array-struct = { version = "^0.3.1", default-features = false }
hmac-sha256 = { version = "^1", default-features = false }
jupiter-amm-interface = { version = "^0.6", default-features = false }
rust_decimal = { version = "^1.36.0", default-features = false } # vers constraint based on jupiter-amm-interface
sanctum-fee-ratio = { version = "^2", default-features = false }
sanctum-u64-ratio = { version = "^2", default-features = false }
serde = { version = "^1", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
tsify-next = { version = "^0.5.5", default-features = false }
wasm-bindgen = { version = "^0.2", default-features = false }

# dev-dependencies
borsh = { version = "^1", default-features = false }
expect-test = "^1"
glob = { version = "^0.3", default-features = false }
lazy_static = { version = "^1", default-features = false }
proptest = { version = "^1", default-features = false }
rand = { version = "^0.9", default-features = false }
serde_json = { version = "^1", default-features = false }

# solana crates (for dev)
mollusk-svm = { version = "^0.5", default-features = false }
mollusk-svm-programs-token = { version = "^0.5", default-features = false }
solana-account = { version = "^2.2.1", default-features = false } # vers constraint based on solana-sdk subdep
solana-account-decoder-client-types = { version = "^2", default-features = false }
solana-instruction = { version = "^2.3.0", default-features = false } # vers constraint based on solana-sdk subdep
solana-logger = { version = "^2.3", default-features = false }
solana-program-error = { version = "^2.2", default-features = false }
solana-pubkey = { version = "^2.2.1", default-features = false } # vers constraint based on solana-sdk subdep
solana-sha256-hasher = { version = "^2.2.1", default-features = false } # vers constraint based on solana-sdk subdep
# TODO: remove this heavy dep when jup no longer depends on it
solana-sdk = { version = "^2.3.1", default-features = false }  # vers constraint based on jupiter-amm-interface

# individual stake pool SDKs (for sol value calculators)
sanctum-marinade-liquid-staking-core = { git = "https://github.com/igneous-labs/sanctum-marinade-liquid-staking-sdk.git", branch = "main", default-features = false }
sanctum-spl-stake-pool-core = { git = "https://github.com/igneous-labs/sanctum-spl-stake-pool-sdk.git", branch = "master", default-features = false }
solido-legacy-core = { git = "https://github.com/igneous-labs/solido-legacy-sdk.git", branch = "master", default-features = false }

# jiminy crates
jiminy-cpi = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-entrypoint = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-log = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-pda = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-program-error = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-return-data = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-sysvar-rent = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
sanctum-ata-jiminy = { git = "https://github.com/igneous-labs/sanctum-ata-sdk.git", branch = "master", default-features = false }
sanctum-spl-token-core = { git = "https://github.com/igneous-labs/sanctum-spl-token-sdk.git", branch = "master", default-features = false }
sanctum-spl-token-jiminy = { git = "https://github.com/igneous-labs/sanctum-spl-token-sdk.git", branch = "master", default-features = false }
sanctum-system-jiminy = { git = "https://github.com/igneous-labs/sanctum-system-sdk.git", branch = "master", default-features = false }

# workspace members
inf1-ctl-core = { path = "controller/core" }
inf1-ctl-jiminy = { path = "controller/jiminy" }
inf1-jup-interface = { path = "jup-interface" }
inf1-pp-ag-core = { path = "pricing/ag/core" }
inf1-pp-ag-std = { path = "pricing/ag/std" }
inf1-pp-core = { path = "pricing/core" }
inf1-pp-flatfee-core = { path = "pricing/flatfee/core" }
inf1-pp-flatfee-std = { path = "pricing/flatfee/std" }
inf1-pp-flatslab-core = { path = "pricing/flatslab/core" }
inf1-pp-flatslab-std = { path = "pricing/flatslab/std" }
inf1-pp-jiminy = { path = "pricing/jiminy" }
inf1-pp-std = { path = "pricing/std" }
inf1-core = { path = "core" }
inf1-jiminy = { path = "jiminy" }
inf1-std = { path = "std" }
inf1-svc-ag-core = { path = "sol-val-calc/ag/core" }
inf1-svc-ag-std = { path = "sol-val-calc/ag/std" }
inf1-svc-core = { path = "sol-val-calc/core" }
inf1-svc-generic = { path = "sol-val-calc/generic" }
inf1-svc-jiminy = { path = "sol-val-calc/jiminy" }
inf1-svc-lido-core = { path = "sol-val-calc/lido/core" }
inf1-svc-lido-std = { path = "sol-val-calc/lido/std" }
inf1-svc-marinade-core = { path = "sol-val-calc/marinade/core" }
inf1-svc-marinade-std = { path = "sol-val-calc/marinade/std" }
inf1-svc-spl-core = { path = "sol-val-calc/spl/core" }
inf1-svc-spl-std = { path = "sol-val-calc/spl/std" }
inf1-svc-std = { path = "sol-val-calc/std" }
inf1-svc-wsol-core = { path = "sol-val-calc/wsol/core" }
inf1-svc-wsol-std = { path = "sol-val-calc/wsol/std" }
inf1-test-utils = { path = "./test-utils" }
inf1-update-traits = { path = "update-traits" }
sanctum-token-ratio-compat = { path = "legacy/sanctum-token-ratio-compat" }
