[package]
name = "inf1-jup-interface"
edition.workspace = true
license-file.workspace = true
version.workspace = true
include = ["src/**/*", "Cargo.toml"]

[target.'cfg(not(target_os = "solana"))'.dependencies]
anyhow = { workspace = true }
inf1-std = { workspace = true }
jupiter-amm-interface = { workspace = true }
rust_decimal = { workspace = true }

# solana-deps
# try not to use solana-sdk so that we can easily remove it in the future
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-sha256-hasher = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
generic-array-struct = { workspace = true }
inf1-test-utils = { workspace = true }
lazy_static = { workspace = true }
mollusk-svm = { workspace = true }
