[package]
name = "inf1-std"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
inf1-core = { workspace = true }
inf1-pp-ag-std = { workspace = true }
inf1-svc-ag-std = { workspace = true }

[dev-dependencies]
inf1-test-utils = { workspace = true }
solana-pubkey = { workspace = true }
