[package]
name = "inf1-ctl-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }

[dev-dependencies]
borsh = { workspace = true, features = ["derive", "std"] }
expect-test = { workspace = true }
proptest = { workspace = true, features = ["std"] }
