[package]
name = "inf1-ctl-jiminy"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
inf1-ctl-core = { workspace = true }
inf1-svc-core = { workspace = true }
inf1-pp-core = { workspace = true }
inf1-svc-jiminy = { workspace = true }
jiminy-cpi = { workspace = true }
jiminy-log = { workspace = true }
jiminy-pda = { workspace = true }
jiminy-program-error = { workspace = true }
sanctum-spl-token-jiminy = { workspace = true }
