[package]
name = "inf1-ctl-program"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
inf1-core = { workspace = true }
inf1-ctl-jiminy = { workspace = true }
inf1-svc-jiminy = { workspace = true }
jiminy-cpi = { workspace = true }
jiminy-entrypoint = { workspace = true, features = ["allocator", "panic"] }
jiminy-log = { workspace = true }
sanctum-spl-token-jiminy = { workspace = true }

[dev-dependencies]
inf1-svc-ag-core = { workspace = true }
inf1-test-utils = { workspace = true }
mollusk-svm = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }