[package]
name = "inf1"           # npm package name without @sanctumso/ scope
version = "0.0.1-dev-3" # npm package version
license = "Apache-2.0"  # dont use license-file bec wasm-pack doesnt work properly with it
publish = false         # this gets published to npm, not crates.io
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"] # required for wasm crate

[dependencies]
bs58-fixed = { workspace = true }
bs58-fixed-wasm = { workspace = true, features = ["js"] }
ed25519-compact = { workspace = true }
hmac-sha256 = { workspace = true }
inf1-core = { workspace = true }
inf1-pp-ag-std = { workspace = true }
inf1-pp-flatfee-std = { workspace = true }
inf1-svc-ag = { workspace = true }
inf1-update-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true, features = ["alloc"] }
tsify-next = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
