[package]
name = "inf1-pp-flatfee-core"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
inf1-pp-core = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-token-ratio-compat = { workspace = true }
sanctum-u64-ratio = { workspace = true }
