[package]
name = "inf1-pp-flatslab-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
inf1-pp-core = { workspace = true } 
sanctum-fee-ratio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
