[package]
name = "inf1-pp-flatslab-program"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
inf1-pp-core = { workspace = true }
inf1-pp-flatslab-core = { workspace = true }
jiminy-entrypoint = { workspace = true }
jiminy-return-data = { workspace = true }
jiminy-system-prog-interface = { workspace = true }
